# course_work_4_oop

./: README.md  main.py  pyproject.toml
data/: test_vacancies.json  vacancies_for_use.json  vacancy.json
src/: HeadHunterAPI.py  JSONSaver.py  Vacancy.py  utils.py
tests/: test_Vacancy.py
