[tool.poetry]
name = "course-work-4-oop"
version = "0.1.0"
description = "Программа, которая получает информацию о вакансиях с платформы hh.ru в России, сохраняет ее в файл и позволяет удобно работать с ней: добавлять, фильтровать, удалять"
authors = ["ikachaeva <irenkachaeva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
